==========
Change Log
==========

Version 3.0.10 - (in development)
---------------------------------
- Extended `expr[]` notation to accept a slice, indicating a `stop_on`
  expression:

      test = "BEGIN aaa bbb ccc END"
      BEGIN, END = map(Keyword, "BEGIN END".split())
      body_word = Word(alphas)
      expr = BEGIN + Group(body_word[...: END]) + END
      print(expr.parse_string(test).as_list())

  Prints:

      ['BEGIN', ['aaa', 'bbb', 'ccc'], 'END']

- Fixed bug in srange, when parsing escaped '/' and '\' inside a
  range set.

- Fixed type annotation on SkipTo.


Version 3.0.9 - May, 2022
-------------------------
- Added Unicode set `BasicMultilingualPlane` (may also be referenced
  as `BMP`) representing the Basic Multilingual Plane (Unicode
  characters up to code point 65535). Can be used to parse
  most language characters, but omits emojis, wingdings, etc.
  Raised in discussion with Dave Tapley (issue #392).

- To address mypy confusion of `pyparsing.Optional` and `typing.Optional`
  resulting in `error: "_SpecialForm" not callable` message
  reported in issue #365, fixed the import in exceptions.py. Nice
  sleuthing by Iwan Aucamp and Dominic Davis-Foster, thank you!
  (Removed definitions of `OptionalType`, `DictType`, and `IterableType`
  and replaced them with `typing.Optional`, `typing.Dict`, and
  `typing.Iterable` throughout.)

- Fixed typo in jinja2 template for railroad diagrams, thanks for the
  catch Nioub (issue #388).

- Removed use of deprecated `pkg_resources` package in
  railroad diagramming code (issue #391).

- Updated bigquery_view_parser.py example to parse examples at
  https://cloud.google.com/bigquery/docs/reference/legacy-sql


Version 3.0.8 - April, 2022
---------------------------
- API CHANGE: modified pyproject.toml to require Python version
  3.6.8 or later for pyparsing 3.x. Earlier minor versions of 3.6
  fail in evaluating the `version_info` class (implemented using